mobile first/ header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <script src="./js/script.js" defer></script>
     <title>Sparkle Sorrisos</title>
   </head>
   <body>
@@ -19,8 +21,9 @@
       <div class="navbar-links">
         <ul>
           <li>
-            <a href="#">TRATAMENTOS</a
-            ><img src="./imgs/expandir.svg" alt="expand icon" />
+            <a href="#"
+              >TRATAMENTOS<img src="./imgs/expandir.svg" alt="expand icon"
+            /></a>
           </li>
           <li><a href="#">CONTATO</a></li>
           <li><a href="#">FAQ</a></li>
@@ -29,14 +32,14 @@
     </nav>
     <header>
       <div>
-        <h1>Seu Sorriso Sparkling</h1>
+        <h1>Seu Sorriso Sparkling<span class="dot">.</span></h1>
         <a class="action-btn" href="#"
           >agende uma consulta<img
             src="./imgs/whatsapp.svg"
             alt="whatsapp icon"
         /></a>
       </div>
-      <img src="./imgs/smile-home.jpg" alt="" />
+      <img src="./imgs/smile-home.jpg" alt="homem sorrindo" class="man-smile" />
     </header>
     <section class="differentials">
       <h2 class="secondary-title">diferenciais<span class="dot">.</span></h2>
@@ -209,7 +212,9 @@
         </p>
         <div class="midias">
           <a href="#"><img src="./imgs/facebook.svg" alt="facebook icone" /></a>
-          <a href="#"><img src="./imgs/instagram.svg" alt="instagram icone" /></a>
+          <a href="#"
+            ><img src="./imgs/instagram.svg" alt="instagram icone"
+          /></a>
           <a href="#"><img src="./imgs/linkedin.svg" alt="linkedin icone" /></a>
         </div>
       </div>
