mobile first/differentials style

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <header>
       <div>
-        <h1>Seu Sorriso Sparkling<span class="dot">.</span></h1>
+        <h1 class="blue-line">Seu Sorriso Sparkling<span class="dot">.</span></h1>
         <a class="action-btn" href="#"
           >agende uma consulta<img
             src="./imgs/whatsapp.svg"
@@ -42,27 +42,27 @@
       <img src="./imgs/smile-home.jpg" alt="homem sorrindo" class="man-smile" />
     </header>
     <section class="differentials">
-      <h2 class="secondary-title">diferenciais<span class="dot">.</span></h2>
+      <h2 class="secondary-title blue-line">diferenciais<span class="dot">.</span></h2>
       <div class="bg-cards">
         <div class="card">
           <img src="./imgs/atendimento.svg" alt="headphone icone" />
           <h3>ATENDIMENTO</h3>
           <p>
-            Nosso atendimento é um dos pontos mais aclamados pelos nossos
-            clientes, na verdade, faz parte da cultura da nossa empresa para
+            Nosso atendimento é um dos pontos mais <span>aclamados pelos nossos
+            clientes</span>, na verdade, faz parte da cultura da nossa empresa para
             que, independentemente do numero de clientes, o nosso objetivo é
             fazer com que nosso cliente se sinta como sendo o unico sendo
             atendido, dando toda a devida ateção caso a caso.
           </p>
         </div>
-        <div class="card">
+        <div class="card middle">
           <img src="./imgs/tec.svg" alt="tecnologia icone" />
           <h3>EQUIPAMENTO DE PONTA</h3>
           <p>
             O mundo muda de maneira extraordinariamente rapida, logo, o mesmo se
             pode dizer dos equipamentos odontologicos, mas mesmo assim, a
             SparkleSorrisos sempre se mantém extremamente atualizada com os
-            melhores equipamentos e os melhores softwares.
+            <span>melhores equipamentos e os melhores softwares.</span>
           </p>
         </div>
         <div class="card">
@@ -73,7 +73,7 @@
             própria profissão e muitas vezes acabam prejudicando muito não só a
             si mesmos, mas também aos próprios clientes, isso é algo
             entristecedor e não queremos que isso aconteça com nossos clientes,
-            por isso só contratamos os melhores profissionais.
+            por isso só contratamos <span>os melhores profissionais.</span>
           </p>
         </div>
       </div>
@@ -82,7 +82,7 @@
       <div class="dps">
         <img src="./imgs/depoimento-laço.svg" alt="laço de puxar" />
         <div class="text-testimonials">
-          <h2>depoimentos<span class="dot">.</span></h2>
+          <h2 class="secondary-title">depoimentos<span class="dot">.</span></h2>
           <div class="dp1">
             <p>
               Ameei! Pra mim uma das melhores clinicas do Brasil, atendimento
@@ -105,7 +105,7 @@
       /></a>
     </section>
     <section class="specialties">
-      <h2 class="secondary-title">especialidades<span class="dot">.</span></h2>
+      <h2 class="secondary-title blue-line">especialidades<span class="dot">.</span></h2>
       <div class="specialties-cards">
         <div class="card">
           <img src="./imgs/clinica-geral.jpg" alt="clinica geral" />
