mobile first/ testimonials style

--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
           <h2 class="secondary-title">depoimentos<span class="dot">.</span></h2>
           <div class="dp1">
             <p>
-              Ameei! Pra mim uma das melhores clinicas do Brasil, atendimento
-              nota dez e o doutor era extremamente profissional e simpático.
+              "Ameei! Pra mim uma das melhores clinicas do Brasil, atendimento
+              nota dez e o doutor era extremamente profissional e simpático."
             </p>
             <h3 class="name">Ana Julia</h3>
           </div>
           <div class="dp2">
             <p>
-              Levei a minha filha que estava morrendo DOR ae na semana passada,
+              "Levei a minha filha que estava morrendo DOR ae na semana passada,
               meu problema foi resolvido no mesmo dia, se eu tiver algum
-              problema no dente, ja sei aonde ir.
+              problema no dente, ja sei aonde ir."
             </p>
-            <h3>Ricardo Rodrigues</h3>
+            <h3 class="name">Ricardo Rodrigues</h3>
           </div>
         </div>
       </div>
