mobile first/ about styles

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </div>
     </section>
     <section class="about">
-      <img src="./imgs/predio.jpg" alt="predio" />
+      <img class="building" src="./imgs/predio.jpg" alt="predio" />
       <div class="about-txt">
         <h2 class="secondary-title">sobre nós<span class="dot">.</span></h2>
         <p>
@@ -150,11 +150,12 @@
           <span>foco na gentileza e prontidão</span>, e independente do tamanho
           da empresa, pretendemos continuar melhorando com cultura em mente.
         </p>
-        <div>
-          <img src="./imgs/prontidao.svg" alt="foguete icone" />PRONTIDÃO
+        <div class="icon-txt">
+          <img src="./imgs/prontidao.svg" alt="foguete icone" /><h3>PRONTIDÃO</h3>
         </div>
-        <div>
-          <img src="./imgs/gentileza.svg" alt="coraçao icone" />GENTILEZA
+        <div class="border-line"></div>
+        <div class="icon-txt">
+          <img src="./imgs/gentileza.svg" alt="coraçao icone" /><h3>GENTILEZA</h3>
         </div>
         <a class="action-btn" href="#"
           >agende uma consulta<img
