--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </nav>
     <header>
       <div>
-        <h1 class="blue-line">Seu Sorriso Sparkling<span class="dot">.</span></h1>
+        <h1 class="blue-line">
+          Seu Sorriso Sparkling<span class="dot">.</span>
+        </h1>
         <a class="action-btn" href="#"
           >agende uma consulta<img
             src="./imgs/whatsapp.svg"
@@ -42,17 +44,20 @@
       <img src="./imgs/smile-home.jpg" alt="homem sorrindo" class="man-smile" />
     </header>
     <section class="differentials">
-      <h2 class="secondary-title blue-line">diferenciais<span class="dot">.</span></h2>
+      <h2 class="secondary-title blue-line">
+        diferenciais<span class="dot">.</span>
+      </h2>
       <div class="bg-cards">
         <div class="card">
           <img src="./imgs/atendimento.svg" alt="headphone icone" />
           <h3>ATENDIMENTO</h3>
           <p>
-            Nosso atendimento é um dos pontos mais <span>aclamados pelos nossos
-            clientes</span>, na verdade, faz parte da cultura da nossa empresa para
-            que, independentemente do numero de clientes, o nosso objetivo é
-            fazer com que nosso cliente se sinta como sendo o unico sendo
-            atendido, dando toda a devida ateção caso a caso.
+            Nosso atendimento é um dos pontos mais
+            <span>aclamados pelos nossos clientes</span>, na verdade, faz parte
+            da cultura da nossa empresa para que, independentemente do numero de
+            clientes, o nosso objetivo é fazer com que nosso cliente se sinta
+            como sendo o unico sendo atendido, dando toda a devida ateção caso a
+            caso.
           </p>
         </div>
         <div class="card middle">
@@ -105,7 +110,9 @@
       /></a>
     </section>
     <section class="specialties">
-      <h2 class="secondary-title blue-line">especialidades<span class="dot">.</span></h2>
+      <h2 class="secondary-title blue-line">
+        especialidades<span class="dot">.</span>
+      </h2>
       <div class="specialties-cards">
         <div class="card">
           <img src="./imgs/clinica-geral.jpg" alt="clinica geral" />
@@ -151,11 +158,13 @@
           da empresa, pretendemos continuar melhorando com cultura em mente.
         </p>
         <div class="icon-txt">
-          <img src="./imgs/prontidao.svg" alt="foguete icone" /><h3>PRONTIDÃO</h3>
+          <img src="./imgs/prontidao.svg" alt="foguete icone" />
+          <h3>PRONTIDÃO</h3>
         </div>
         <div class="border-line"></div>
         <div class="icon-txt">
-          <img src="./imgs/gentileza.svg" alt="coraçao icone" /><h3>GENTILEZA</h3>
+          <img src="./imgs/gentileza.svg" alt="coraçao icone" />
+          <h3>GENTILEZA</h3>
         </div>
         <a class="action-btn" href="#"
           >agende uma consulta<img
@@ -165,42 +174,88 @@
       </div>
     </section>
     <section class="faq">
-      <h3>
-        Onde estamos localizados?<img
-          src="./imgs/expandir.svg"
-          alt="expandir icone"
-        />
-      </h3>
-      <h3>
-        Qual o tipo de clareamento dental ideal para você?<img
-          src="./imgs/expandir.svg"
-          alt="expandir icone"
-        />
-      </h3>
-      <h3>
-        Oque torna o nosso atendimento humanizado tão importante?<img
-          src="./imgs/expandir.svg"
-          alt="expandir icone"
-        />
-      </h3>
-      <h3>
-        Porque visitar um dentista regularmente é tão importante?<img
-          src="./imgs/expandir.svg"
-          alt="expandir icone"
-        />
-      </h3>
-      <h3>
-        Seu filho tem medo de ir ao dentista, oque podemos fazer?<img
-          src="./imgs/expandir.svg"
-          alt="expandir icone"
-        />
-      </h3>
-      <h3>
-        O tratamento de canal dói?<img
-          src="./imgs/expandir.svg"
-          alt="expandir icone"
-        />
-      </h3>
+      <div class="faq-question">
+        <div class="question">
+          <h3>Onde estamos localizados?</h3>
+          <img
+            src="./imgs/expandir-faq.svg"
+            class="question-arrow"
+            alt="expandir icone"
+          />
+        </div>
+        <div class="answer">
+          <p>
+            Nós estamos localizados no endereço:
+            <span>R. Aly Pertou, 818 - Curitiba - PR, 84045-1952</span>
+          </p>
+        </div>
+      </div>
+      <div class="faq-question">
+        <div class="question">
+          <h3>Qual o tipo de clareamento dental ideal para você?</h3>
+          <img
+            src="./imgs/expandir-faq.svg"
+            class="question-arrow"
+            alt="expandir icone"
+          />
+        </div>
+        <div class="answer">
+          <p>Você pode tanto optar por fazer o <span>clareamento caseiro que é perfeito para quem tem uma sensibilidade muito alta</span>, porém ela depende completamente do paciente e pode ser um pouco cansativa, mas você pode também optar por fazer o <span>clareamento dental de consultório</span> com luz ultravioleta, que é <span>perfeito para quem não tem a pacienciência de usar a moldeira todos os dias em casa</span>, além de ter um resultado mais rápido.</p>
+        </div>
+      </div>
+      <div class="faq-question">
+        <div class="question">
+          <h3>Oque torna o nosso atendimento humanizado tão importante?</h3>
+          <img
+            src="./imgs/expandir-faq.svg"
+            class="question-arrow"
+            alt="expandir icone"
+          />
+        </div>
+        <div class="answer">
+          <p>Como ja dissertamos sobre, a <span>gentileza faz parte da cultura da nossa empresa</span>, e por isso, nós nos importantamos muito com o bem estar físico e psicológico do paciente, então nos atentamos para sempre <span>acolher o paciente e todos os seus medos.</span></p>
+        </div>
+      </div>
+      <div class="faq-question">
+        <div class="question">
+          <h3>Porque visitar um dentista regularmente é tão importante?</h3>
+          <img
+            src="./imgs/expandir-faq.svg"
+            class="question-arrow"
+            alt="expandir icone"
+          />
+        </div>
+        <div class="answer">
+          <p>Pois assim podemos trabalhar com a prevenção de doenças de uma maneira muito mais <span>eficiente</span>, além disso, mesmo se você já tiver algum problema, será muito mais <span>facil</span> trata-lo se conseguirmos identifica-lo no começo, e para que isso aconteça, e necessário fazer <span>consultas regularmente.</span></p>
+        </div>
+      </div>
+      <div class="faq-question">
+        <div class="question">
+          <h3>Seu filho tem medo de ir ao dentista, oque podemos fazer?</h3>
+          <img
+            src="./imgs/expandir-faq.svg"
+            class="question-arrow"
+            alt="expandir icone"
+          />
+        </div>
+        <div class="answer">
+          <p>Em nossa clinica temos especialistas que trabalham com <span>pediatria</span> que sabem muito bem como lidar com crianças, então podemos garantir que com a nossa clinica, seu <span>filho começara amar ir para o dentista.</span></p>
+        </div>
+      </div>
+      <div class="faq-question">
+        <div class="question">
+          <h3>O tratamento de canal dói?</h3>
+          <img
+            src="./imgs/expandir-faq.svg"
+            class="question-arrow"
+            alt="expandir icone"
+          />
+        </div>
+        <div class="answer">
+          <p><span>Definitivamente não!</span> Principalmente quando se é utilizado um bom anestésico, e se isso for combinada com a excelente técnica de
+            nossos profissionais, não existira dor nenhuma.</p>
+        </div>
+      </div>
     </section>
     <footer>
       <div class="contact">
