Suitable for normal desktops

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             alt="whatsapp icon"
         /></a>
       </div>
-      <img src="./imgs/smile-home.jpg" alt="homem sorrindo" class="man-smile" />
     </header>
+    <div class="man-smile" ></div>
     <section class="differentials">
       <h2 class="secondary-title blue-line">
         diferenciais<span class="dot">.</span>
@@ -157,7 +157,6 @@
       </div>
     </section>
     <section class="about">
-      <img class="building" src="./imgs/predio.jpg" alt="predio" />
       <div class="about-txt">
         <h2 class="secondary-title">sobre nós<span class="dot">.</span></h2>
         <p>
@@ -183,6 +182,7 @@
         /></a>
       </div>
     </section>
+      <img class="building" src="./imgs/predio.jpg" alt="predio" />
     <section class="faq">
       <div class="faq-question">
         <div class="question">
