all specialties pages added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="css/footer-and-header.css">
     <script src="./js/script.js" defer></script>
     <title>Sparkle Sorrisos</title>
   </head>
@@ -22,21 +23,21 @@
         <ul>
           <li class="show-drop">
             <a href="#"
-              >TRATAMENTOS<img src="./imgs/expandir.svg" alt="expand icon"
+              >TRATAMENTOS<img id="expand" src="./imgs/expandir.svg" alt="expand icon"
             /></a>
           </li>
           <li id="dropdown-list">
             <ul>
-              <li class="dropdown"><a href="#">Clínica Geral</a></li>
-              <li class="dropdown"><a href="#">Endodontia</a></li>
-              <li class="dropdown"><a href="#">Estética</a></li>
-              <li class="dropdown"><a href="#">Implantes</a></li>
-              <li class="dropdown"><a href="#">Ortodontia</a></li>
-              <li class="dropdown"><a href="#">Próteses</a></li>
+              <li class="dropdown"><a href="./pages/clinica-geral.html">Clínica Geral</a></li>
+              <li class="dropdown"><a href="./pages/endodontia.html">Endodontia</a></li>
+              <li class="dropdown"><a href="./pages/estetica.html">Estética</a></li>
+              <li class="dropdown"><a href="./pages/implantes.html">Implantes</a></li>
+              <li class="dropdown"><a href="./pages/ortodontia.html">Ortodontia</a></li>
+              <li class="dropdown"><a href="./pages/proteses.html">Próteses</a></li>
             </ul>
           </li>
-          <li><a href="#">CONTATO</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="./pages/contato.html">CONTATO</a></li>
+          <li><a href="#faq">FAQ</a></li>
         </ul>
       </div>
     </nav>
@@ -127,32 +128,32 @@
         <div class="card">
           <img src="./imgs/clinica-geral.jpg" alt="clinica geral" />
           <h3>Clínica Geral</h3>
-          <a href="#">saiba mais</a>
+          <a href="./pages/clinica-geral.html">saiba mais</a>
         </div>
         <div class="card">
           <img src="./imgs/endodontia.jpg" alt="endodontia" />
           <h3>Endodontia</h3>
-          <a href="#">saiba mais</a>
+          <a href="./pages/endodontia.html">saiba mais</a>
         </div>
         <div class="card">
           <img src="./imgs/estetica.jpg" alt="estetica" />
           <h3>Estética</h3>
-          <a href="#">saiba mais</a>
+          <a href="./pages/estetica.html">saiba mais</a>
         </div>
         <div class="card">
           <img src="./imgs/implante.jpg" alt="implantes" />
           <h3>Implantes</h3>
-          <a href="#">saiba mais</a>
+          <a href="./pages/implantes.html">saiba mais</a>
         </div>
         <div class="card">
           <img src="./imgs/ortodontia.jpg" alt="ortodontia" />
           <h3>Ortodontia</h3>
-          <a href="#">saiba mais</a>
+          <a href="./pages/ortodontia.html">saiba mais</a>
         </div>
         <div class="card">
           <img src="./imgs/protese.jpg" alt="proteses" />
           <h3>Próteses</h3>
-          <a href="#">saiba mais</a>
+          <a href="./pages/proteses.html">saiba mais</a>
         </div>
       </div>
     </section>
@@ -183,7 +184,7 @@
       </div>
     </section>
       <img class="building" src="./imgs/predio.jpg" alt="predio" />
-    <section class="faq">
+    <section class="faq" id="faq">
       <div class="faq-question">
         <div class="question">
           <h3>Onde estamos localizados?</h3>
