contact page created

--- a/pages/message.html
+++ b/pages/message.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/footer-and-header.css" />
-    <link rel="stylesheet" href="../css/contact.css" />
+    <link rel="stylesheet" href="../css/message.css" />
     <script src="../js/script.js" defer></script>
     <title>Contato</title>
   </head>
@@ -70,31 +70,7 @@
       </div>
     </header>
     <section>
-      <div class="container">
-        <div class="txt">
-          <img src="../imgs/SparkleSorrisos.svg" alt="logo" />
-          <h2 class="secondary-title blue-line">
-            entre em contato com a gente<span class="dot">.</span>
-          </h2>
-          <form action="../pages/message.html" method="get">
-            <label for="nome">Nome*</label>
-            <input type="text" name="nome" id="nome" required />
-            <label for="email">Seu E-mail*</label>
-            <input type="email" name="email" id="email" required />
-            <label for="mensagem">Mensagem*</label>
-            <textarea
-              name="mensagem"
-              id="mensagem"
-              cols="30"
-              rows="10"
-            ></textarea>
-            <input type="submit" value="enviar" class="send" />
-          </form>
-        </div>
-        <div class="img">
-          <img src="../imgs/mails.jpg" alt="cartas" class="letters" />
-        </div>
-      </div>
+        <h2>mensagem enviada.</h2>
     </section>
     <footer>
       <div class="contact">
