--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="css/footer-and-header.css">
+    <link rel="shortcut icon" href="./imgs/favicon.png" type="image/png">
+    <link rel="stylesheet" href="css/footer-and-header.css" />
     <script src="./js/script.js" defer></script>
     <title>Sparkle Sorrisos</title>
   </head>
   <body>
     <nav>
       <div class="logo">
-        <a href="#"><img src="./imgs/SparkleSorrisos.svg" alt="SparkleSorrisos logo" /></a>
+        <a href="#"
+          ><img src="./imgs/SparkleSorrisos.svg" alt="SparkleSorrisos logo"
+        /></a>
       </div>
       <a href="#" class="toggle-btn">
         <span class="bar"></span>
@@ -23,17 +26,32 @@
         <ul>
           <li class="show-drop">
             <a href="#"
-              >TRATAMENTOS<img id="expand" src="./imgs/expandir.svg" alt="expand icon"
+              >TRATAMENTOS<img
+                id="expand"
+                src="./imgs/expandir.svg"
+                alt="expand icon"
             /></a>
           </li>
           <li id="dropdown-list">
             <ul>
-              <li class="dropdown"><a href="./pages/clinica-geral.html">Clínica Geral</a></li>
-              <li class="dropdown"><a href="./pages/endodontia.html">Endodontia</a></li>
-              <li class="dropdown"><a href="./pages/estetica.html">Estética</a></li>
-              <li class="dropdown"><a href="./pages/implantes.html">Implantes</a></li>
-              <li class="dropdown"><a href="./pages/ortodontia.html">Ortodontia</a></li>
-              <li class="dropdown"><a href="./pages/proteses.html">Próteses</a></li>
+              <li class="dropdown">
+                <a href="./pages/clinica-geral.html">Clínica Geral</a>
+              </li>
+              <li class="dropdown">
+                <a href="./pages/endodontia.html">Endodontia</a>
+              </li>
+              <li class="dropdown">
+                <a href="./pages/estetica.html">Estética</a>
+              </li>
+              <li class="dropdown">
+                <a href="./pages/implantes.html">Implantes</a>
+              </li>
+              <li class="dropdown">
+                <a href="./pages/ortodontia.html">Ortodontia</a>
+              </li>
+              <li class="dropdown">
+                <a href="./pages/proteses.html">Próteses</a>
+              </li>
             </ul>
           </li>
           <li><a href="./pages/contato.html">CONTATO</a></li>
@@ -46,14 +64,14 @@
         <h1 class="blue-line">
           Seu Sorriso Sparkling<span class="dot">.</span>
         </h1>
-        <a class="action-btn" href="#"
+        <a class="action-btn" href="https://api.whatsapp.com/send?phone=554391436064"
           >agende uma consulta<img
             src="./imgs/whatsapp.svg"
             alt="whatsapp icon"
         /></a>
       </div>
     </header>
-    <div class="man-smile" ></div>
+    <div class="man-smile"></div>
     <section class="differentials">
       <h2 class="secondary-title blue-line">
         diferenciais<span class="dot">.</span>
@@ -116,7 +134,7 @@
           </div>
         </div>
       </div>
-      <a class="action-btn" href="#"
+      <a class="action-btn" href="https://api.whatsapp.com/send?phone=554391436064"
         >agende uma consulta<img src="./imgs/whatsapp.svg" alt="whatsapp icon"
       /></a>
     </section>
@@ -165,7 +183,7 @@
           <span>2005 em Rolândia</span>, desde de o começo da SparkleSorrisos
           prezamos por uma cultura com extremo
           <span>foco na gentileza e prontidão</span>, e independente do tamanho
-          da empresa, pretendemos continuar melhorando com cultura em mente.
+          da empresa, pretendemos continuar melhorando com essa cultura em mente.
         </p>
         <div class="icon-txt">
           <img src="./imgs/prontidao.svg" alt="foguete icone" />
@@ -176,14 +194,14 @@
           <img src="./imgs/gentileza.svg" alt="coraçao icone" />
           <h3>GENTILEZA</h3>
         </div>
-        <a class="action-btn" href="#"
+        <a class="action-btn" href="https://api.whatsapp.com/send?phone=5543991436064"
           >agende uma consulta<img
             src="./imgs/whatsapp.svg"
             alt="whatsapp icon"
         /></a>
       </div>
     </section>
-      <img class="building" src="./imgs/predio.jpg" alt="predio" />
+    <img class="building" src="./imgs/predio.jpg" alt="predio" />
     <section class="faq" id="faq">
       <div class="faq-question">
         <div class="question">
@@ -307,7 +325,7 @@
         <p>Email: pablo270404@gmail.com</p>
         <p>Telefone: +55 (43) 99143-6064</p>
         <p>
-          Horario de funcionamento: Segunda Sexta, das 8h as 20h, Sabados, das
+          Horario de funcionamento: Segunda - Sexta, das 8h as 20h, Sabados, das
           8h as 14h.
         </p>
         <div class="midias">
@@ -322,7 +340,7 @@
       <div class="localization">
         <img src="./imgs/mapa.jpg" alt="mapa" />
         <p>R. Aly Pertou, 818 - Curitiba - PR, 84045-1952</p>
-        <a class="action-btn" href="#"
+        <a class="action-btn" href="https://api.whatsapp.com/send?phone=554391436064"
           >agende uma consulta<img
             src="./imgs/whatsapp.svg"
             alt="whatsapp icon"
