--- a/pages/endodontia.html
+++ b/pages/endodontia.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/footer-and-header.css" />
     <link rel="stylesheet" href="../css/specialties-pages.css" />
+    <link rel="shortcut icon" href="../imgs/favicon.png" type="image/png">
     <script src="../js/script.js" defer></script>
     <title>Endodontia</title>
   </head>
@@ -47,7 +48,7 @@
         <h1 class="blue-line">
           Seu Sorriso Sparkling<span class="dot">.</span>
         </h1>
-        <a class="action-btn" href="#"
+        <a class="action-btn" href="https://api.whatsapp.com/send?phone=554391436064"
           >agende uma consulta<img
             src="../imgs/whatsapp.svg"
             alt="whatsapp icon"
@@ -69,7 +70,7 @@
             consiste na remoção da polpa que se encontra no canal do dente. Logo
             após a remoção, o dentista substitui esse tecido com outro material.
           </p>
-          <a class="action-btn" href="#"
+          <a class="action-btn" href="https://api.whatsapp.com/send?phone=554391436064"
             >agende uma consulta<img
               src="../imgs/whatsapp.svg"
               alt="whatsapp icon"
@@ -83,7 +84,7 @@
         <p>Email: pablo270404@gmail.com</p>
         <p>Telefone: +55 (43) 99143-6064</p>
         <p>
-          Horario de funcionamento: Segunda Sexta, das 8h as 20h, Sabados, das
+          Horario de funcionamento: Segunda - Sexta, das 8h as 20h, Sabados, das
           8h as 14h.
         </p>
         <div class="midias">
@@ -102,7 +103,7 @@
       <div class="localization">
         <img src="../imgs/mapa.jpg" alt="mapa" />
         <p>R. Aly Pertou, 818 - Curitiba - PR, 84045-1952</p>
-        <a class="action-btn" href="#"
+        <a class="action-btn" href="https://api.whatsapp.com/send?phone=554391436064"
           >agende uma consulta<img
             src="../imgs/whatsapp.svg"
             alt="whatsapp icon"
